fixed the bug where setting box layout is incorrect on mobile

--- a/public/Style/style.css
+++ b/public/Style/style.css
@@ -307,7 +307,7 @@ respond{
 	}
 }
 #settingBox{
-	height: 55vh;
+	height: 380px;
 	position: relative;
 	font-size: 0.9em;
 }
